kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app:  mysql
    spec:
      containers:
      - name:  mysql-server
        image:  docker.io/marcelobruckner/mysql-personal-image:1.0
        ports:
        - containerPort: 3306
