kubernetes/financas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financas-service
spec:
  selector:
    app: financas-api
  ports:
     - protocol: TCP
       port: 8080 # Porta do Service, que será mapeada para a porta 8080 do Pod
       targetPort: 8080 # Porta dos Pods
  type: NodePort
