kubernetes/financas-crc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    deployment.kubernetes.io/revision: '1'
    openshift.io/generated-by: OpenShiftWebConsole
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"financas-api:3.6","namespace":"financas"},"fieldPath":"spec.template.spec.containers[?(@.name==\"financas-api\")].image","paused":"false"}]
  resourceVersion: '31804'
  name: financas-api
  uid: 5cc19989-3f6b-458a-8b0f-eac13ccb6b2d
  creationTimestamp: '2024-10-24T15:15:58Z'
  generation: 1
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2024-10-24T15:15:58Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/route-disabled': {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-namespace': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"financas-api"}':
                  'f:image': {}
                  'f:terminationMessagePolicy': {}
                  .: {}
                  'f:resources': {}
                  'f:env':
                    .: {}
                    'k:{"name":"DATABASE_PASSWORD"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:secretKeyRef': {}
                    'k:{"name":"DATABASE_URL"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:secretKeyRef': {}
                    'k:{"name":"DATABASE_USER"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:secretKeyRef': {}
                  'f:terminationMessagePath': {}
                  'f:imagePullPolicy': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:name': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-10-24T15:16:03Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: financas
  labels:
    app: financas-api
    app.kubernetes.io/component: financas-api
    app.kubernetes.io/instance: financas-api
    app.kubernetes.io/name: financas-api
    app.kubernetes.io/part-of: financas-api-app
    app.openshift.io/runtime: openjdk
    app.openshift.io/runtime-namespace: financas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financas-api
  template:
    metadata:
      labels:
        app: financas-api
        deployment: financas-api
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: financas-api
          image: >-
            image-registry.openshift-image-registry.svc:5000/financas/financas-api@sha256:ee880d493c2f9e8e569b4ccfc15967eafd4551b24e8b41f233420b6c736c15c6
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false

---
kind: Service
apiVersion: v1
metadata:
  name: financas-api
  namespace: financas
  uid: 9160ccd7-00dd-44f3-8855-34551b75744a
  resourceVersion: '31750'
  creationTimestamp: '2024-10-24T15:15:58Z'
  labels:
    app: financas-api
    app.kubernetes.io/component: financas-api
    app.kubernetes.io/instance: financas-api
    app.kubernetes.io/name: financas-api
    app.kubernetes.io/part-of: financas-api-app
    app.openshift.io/runtime-version: '3.6'
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  clusterIP: 10.217.5.139
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 10.217.5.139
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: financas-api
    deployment: financas-api
status:
  loadBalancer: {}
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: financas-api
  namespace: financas
  uid: 543a8cb6-f0bb-41a1-8281-04af88494405
  resourceVersion: '31756'
  creationTimestamp: '2024-10-24T15:15:58Z'
  labels:
    app: financas-api
    app.kubernetes.io/component: financas-api
    app.kubernetes.io/instance: financas-api
    app.kubernetes.io/name: financas-api
    app.kubernetes.io/part-of: financas-api-app
    app.openshift.io/runtime-version: '3.6'
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: 'true'
spec:
  host: financas-api-financas.apps-crc.testing
  to:
    kind: Service
    name: financas-api
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: financas-api-financas.apps-crc.testing
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-10-24T15:15:58Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps-crc.testing
